v11/fixtures/ast/errors/alias_reexport_impl_ambiguity/alias_a.able
package alias_reexport_impl_ambiguity_a

import alias_reexport_impl_ambiguity_base.{Taggable, Widget}

private type AliasA = Widget

impl Taggable for AliasA {
  fn tag(self: Self) -> String { "a" }
}
